update analyze file endpoint, update readme file and openapi docs
